--- a/resources/public/css/kif.css
+++ b/resources/public/css/kif.css
@@ -47,7 +47,22 @@ h3
     margin: 0px;
 }
 
+
+//Fixes for the DataTable widget not taken into account via ThemeRoller.
 .css_right
 {
     float: right;
+}
+
+.ui-button
+{
+    margin-left: 0px;
+    margin-right: -0.1em !important;
+    padding: 0px 6px;
+}
+
+.ui-widget-header
+{
+    padding-right: 5px;
+    padding-bottom: 2px;
 }
