--- a/resources/public/css/kif.css
+++ b/resources/public/css/kif.css
@@ -47,8 +47,6 @@ h3
     margin: 0px;
 }
 
-
-//Fixes for the DataTable widget not taken into account via ThemeRoller.
 .css_right
 {
     float: right;
@@ -58,6 +56,7 @@ h3
 {
     margin-left: 0px;
     margin-right: -0.1em !important;
+    margin-top: 1px;
     padding: 0px 6px;
 }
 
