Made the filename the title of the file info panel, resized the download button.

--- a/resources/public/css/kif.css
+++ b/resources/public/css/kif.css
@@ -17,6 +17,12 @@ body, label, textarea, select, button
     background-color: rgb(255,255,255);
 }
 
+#filename
+{
+    border-bottom: 1px rgb(215,215,215) solid;
+    background-color: rgb(240,240,240);
+}
+
 #lastmod, #filesize, #remaining, #useslimit
 {
     float: right;
