Gave the page-wrapping div an id and adding top and bottom page margins.

--- a/resources/public/css/kif.css
+++ b/resources/public/css/kif.css
@@ -3,6 +3,12 @@ body, label, textarea, select, button
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
+#page-wrapper
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 #file-info-wrapper
 {
     margin-bottom: 5px;
