--- a/resources/public/css/kif.css
+++ b/resources/public/css/kif.css
@@ -95,7 +95,7 @@ div#download_link_div
 #clippy-irods-instrs, #clippy-wget-instrs, #clippy-curl-instrs
 {
     padding-left: 5px;
-    margin-right: 5px;
+    font-family: monospace, monospace;
 }
 
 #alternative_downloads_header
@@ -123,9 +123,14 @@ div#download_link_div
 
 #header_downloader_instr
 {
-    margin-top: 5px;
     border-top: 1px rgb(215,215,215) solid;
     border-bottom: 1px rgb(215,215,215) solid;
+}
+
+input
+{
+    font-size: 100%;
+    font-family: monospace, monospace;
 }
 
 .ui-toolbar
