Fixed some typos, removed cruft.

--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -99,12 +99,12 @@ div#download_link_div {
 #alternative_downloads_header { font-size: 125%; }
 #alternative_downloads_inner { background: @outer-bg-color; .bordered-solid; }
 #header_irods_instr, #header_downloader_instr { padding-left: 5px; background: @outer-bg-color; }
-#header_irods_instr { border-bottom: @border; }
-#header_downloader_instr { border-top: @border; border-bottom: @border; }
+//#header_irods_instr { border-bottom: @border; }
+//#header_downloader_instr { border-top: @border; border-bottom: @border; }
 input { font-size: 100%; font-family: monospace, monospace; }
 
 .ui-toolbar { padding-left: 3px; }
-.ui-bottonset { margin-right: 2px; }
+.ui-buttonset { margin-right: 2px; }
 
 td, th { padding-left: @margin-padding; padding-right: @margin-padding }
 td { background: @inner-bg-color; border-right: @border; border-left: @border; }
