--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -1,22 +1,30 @@
-@outer-bg-color: rgb(240,240,240) none repeat scroll;
+@import-once "elements.less";
+
+@outer-bg-color: #5B5C5D;
 @border: 1px rgb(215,215,215) solid;
-@border-radius: 4px;
+@border-radius: 0px;
 @inner-bg-color: rgb(255,255,255);
 @label-font: "Helvetica Neue", Arial, sans-serif;
 @margin-padding: 5px;
+@de-blue: #7AC9D2;
+@de-panel: #EAEAEA;
 
-.bordered (@radius: 4px) {
-    border-radius: @radius;
+.bordered {
+    border-radius: @border-radius;
 }
 
-.bordered-solid (@radius: 4px) {
-    .bordered(@radius);
+.bordered-solid {
+    .bordered;
     border: @border;
 }
 
 .common-margin-padding {
     margin-bottom: @margin-padding;
     padding: @margin-padding;
+}
+
+body {
+    background: #FFFFFF;
 }
 
 body, label, textarea, select, button {
@@ -27,6 +35,8 @@ body, label, textarea, select, button {
     margin-top: (@margin-padding * 2);
     margin-bottom: (@margin-padding * 2);
 }
+
+#wrapper_filename { text-align: center; }
 
 #file-info-wrapper {
     .bordered;
@@ -61,10 +71,9 @@ body, label, textarea, select, button {
     text-align: @text-align;
 }
 
-#filename { border-bottom: @border; background: @outer-bg-color; }
+#filename { border-bottom: @border; background: @de-panel; }
 #lastmod, #filesize, #remaining, #uses-limit { float: right; width: 66%; }
 #lastmod-label, #filesize-label, #remaining-label, #useslimit-label { .label-settings; }
-#wrapper_filename { text-align: center; }
 
 div#download_link_div {
     padding-top: (@margin-padding * 4);
@@ -82,8 +91,8 @@ div#download_link_div {
     padding: 4px;
 }
 
-#irods_avus_wrapper { padding-right: 3px; padding-left: 3px; }
-#wrapper_irods_avus_inner { .bordered-solid; background: @outer-bg-color; }
+#wrapper_irods_avus_inner { .bordered-solid; background: @de-panel; }
+#irods_avus_wrapper { padding-left: 3px; padding-right: 3px; }
 
 #alternative_downloads {
     background: @outer-bg-color;
@@ -98,18 +107,17 @@ div#download_link_div {
 }
 
 #alternative_downloads_header { font-size: 125%; }
-#alternative_downloads_inner { background: @outer-bg-color; .bordered-solid; }
-#header_irods_instr, #header_downloader_instr { padding-left: 5px; background: @outer-bg-color; }
-//#header_irods_instr { border-bottom: @border; }
-//#header_downloader_instr { border-top: @border; border-bottom: @border; }
+#alternative_downloads_inner { background: @de-panel; .bordered-solid; }
+#header_irods_instr, #header_downloader_instr { padding-left: 5px; background: @de-panel; .bordered; }
+irods_avus_header { background: @de-panel; }
 input { font-size: 100%; font-family: monospace, monospace; }
 
-.ui-toolbar { padding-left: 3px; }
-.ui-buttonset { margin-right: 2px; }
+//.ui-toolbar { padding-left: 3px; }
+.ui-buttonset { margin-right: 3px; }
 
 td, th { padding-left: @margin-padding; padding-right: @margin-padding }
 td { background: @inner-bg-color; border-right: @border; border-left: @border; }
-.ui-widget-content, .ui-state-default, .ui-widget-header { background: @outer-bg-color; }
+.ui-widget-content, .ui-state-default, .ui-widget-header { background: @de-panel; }
 .ui-widget-header { padding-top: 2px; padding-bottom: 4px; border: 0px; }
 .ui-corner-tl { bordertop-left-radius: 0px; }
 .ui-corner-tr { border-top-right-radius: 0px; }
@@ -118,13 +126,12 @@ td { background: @inner-bg-color; border-right: @border; border-left: @border; }
 
 code { margin-left: @margin-padding; font-family: monospace, monospace; font-size: 100%; }
 label { text-align: right; }
-h1 { font-size: 200%; padding: 0px; margin: 0px; }
+h1 { font-size: 200%; padding: 0px; margin: 0px; .bordered; }
 
 h3 {
     font-size: 125%;
-    padding-left: @margin-padding;
+    padding-left: 3px;
     margin: 0px;
-    background: @outer-bg-color;
 }
 
 .css_right { float: right; }
