--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -270,3 +270,11 @@ body { background: @bg-color; }
         }
     }
 }
+
+#footer {
+    font-size: 25%;
+    width: 100%;
+    p {
+        text-align: right;
+    }
+}
