--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -1,290 +1,10 @@
 @import-once "elements.less";
-
-//Menu and body
-@menu-color: #DAF5F8;
-@menu-width: 100%;
-@menu-height: 50px;
-@menu-text-color: black;
-@menu-position: fixed;
-@img-width: 250px;
-@img-height: 50px;
-@download-text-color: #000000;
-@download-button-color-start: #6AC8D2;
-@download-button-color-stop: #DCF1F3;
-@bg-color: white;
+@import-once "kif-common";
+@import-once "kif-menu";
+@import-once "kif-details";
+@import-once "kif-metadata";
 
 body { background: @bg-color; }
-
-.menu-item () {
-    float: left;
-    width: (@menu-width / 3);
-    height: @menu-height;
-}
-
-.menu-content () {
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    font-size: 200%;
-    font-family: "Helvetica Neue", Arial, sans-serif;
-}
-
-#menu {
-    .drop-shadow(0px, 2px, 10px, 0.5);
-    background: @menu-color;
-    width: @menu-width;
-    height: @menu-height;
-    position: @menu-position;
-    z-index: 100;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    ul {
-        padding: 0;
-        margin: 0;
-
-        li {
-            display: inline;
-
-            div {
-                .menu-item;
-                h1 { .menu-content;
-                    color: @menu-text-color;
-                }
-                
-                a { 
-                    .menu-content;
-                    text-decoration: none;
-                    #download-link-area {
-                        &:hover {
-                            .gradient(
-                                lighten(@download-button-color-start, 10%),
-                                lighten(@download-button-color-start, 10%),
-                                lighten(@download-button-color-stop, 10%),
-                            );
-                        };
-                        &:active {
-                            .inner-shadow(2px, 4px, 6px, 0.5);
-                        };
-                        display: block;
-                        .gradient(
-                            @download-button-color-start,
-                            @download-button-color-start,
-                            @download-button-color-stop
-                        );
-                        //background: @download-button-color;
-                        color: @download-text-color;
-                        .bordered(
-                            darken(@download-button-color-start, 33%), 
-                            darken(@download-button-color-start, 33%), 
-                            darken(@download-button-color-start, 33%), 
-                            darken(@download-button-color-start, 33%)
-                        );
-                        .rounded(10px);
-                        text-align: center;
-                        height: 50px;
-                        width: 300px;
-                        float: right;
-                        margin-right: 10px;
-                    }
-                }
-
-                img { 
-                    .menu-content; 
-                    width: @img-width; 
-                    height: @img-height;
-                    margin-left: 10px;
-                }
-            }
-
-            #download-container { text-align: center; }
-        }
-    }
-}
-
-.ui-corner-all { 
-    border-radius: 0px;
-    border: none;
-}
-
-
-//Details section
-@header-text-color: #4199A9;
-@detail-label-width: 25%;
-@detail-content-width: (100% - @detail-label-width);
-@clippy-width: 10%;
-@command-line-width: (@detail-content-width - @clippy-width);
-@command-line-height: 30px;
-@command-line-top-margin: 3px;
-@copy-default: #EEEEEE;
-@copy-bw-start: 210;
-@copy-bw-stop: 230;
-
-#details {
-    margin-top: 75px;
-}
-
-.section-spacer {
-    float: left;
-    display: block;
-    width: 100%;
-    height: 20px;
-}
-
-.header-style () {
-    margin-top: 25px;
-    border-bottom: 1px solid darken(@bg-color, 20%);
-
-    h2 {
-        font-size: 200%;
-        font-family: "Helvetica Neue", Arial, sans-serif; 
-        color: @header-text-color;    
-    }  
-}
-
-.detail-style () {
-    font-size: 125%;
-    font-family: "Helvetica Neue", Arial, sans-serif;
-    height: 30px;
-    color: black;
-}
-
-.detail-label () {
-    float: left;
-    width: @detail-label-width;
-    p {
-        text-align: left;
-        padding-right: 10px;    
-    }
-}
-
-.detail-content () {
-    float: left;
-    width: @detail-content-width;
-    p {
-        text-align: left;
-        padding-right: 10px;
-    }
-}
-
-#details-header { .header-style; }
-#irods-avus-header { .header-style; }
-#alt-downloads-header { .header-style; }
-
-#lastmod-label, 
-#size-label, 
-#irods-instructions-label, 
-#wget-instructions-label, 
-#curl-instructions-label {
-    .detail-style;
-    .detail-label;
-}
-
-#lastmod, #size {
-    .detail-style;
-    .detail-content;
-}
-
-.ellipsis () {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-#irods-command-line, #wget-command-line, #curl-command-line {
-    .detail-style;
-    .detail-content;
-    margin-top: @command-line-top-margin;
-    width: @command-line-width;
-    height: @command-line-height;
-}
-
-#clippy-wget-wrapper, #clippy-curl-wrapper, #clippy-irods-wrapper {
-    .detail-style;
-    .detail-content;
-    margin-top: @command-line-top-margin;
-    width: @clippy-width;
-    background-color: @download-button-color-start;
-    color: @download-text-color;
-    text-align: center;
-
-    .bordered(
-        darken(@download-button-color-start, 33%), 
-        darken(@download-button-color-start, 33%), 
-        darken(@download-button-color-start, 33%), 
-        darken(@download-button-color-start, 33%)
-    );
-
-    .bw-gradient(
-        @copy-default,
-        @copy-bw-start,
-        @copy-bw-stop
-    );
-
-    .border-radius(10px, 10px, 0px, 0px);
-
-    &.zeroclipboard-is-hover {
-        .bw-gradient(
-            lighten(@copy-default, 10%),
-            (@copy-bw-start + (@copy-bw-start/10)),
-            (@copy-bw-stop + (@copy-bw-stop/10))
-        );
-        // .gradient(
-        //     lighten(@download-button-color-start, 10%),
-        //     lighten(@download-button-color-start, 10%),
-        //     lighten(@download-button-color-stop, 10%),
-        // );
-    }
-
-    &.zeroclipboard-is-active {
-        .inner-shadow(2px, 4px, 6px, 0.5);
-    }
-}
-
-//Metadata table
-@table-border-color: darken(@bg-color, 10%);
-@table-border: 1px solid @table-border-color;
-@table-spacing: 5px;
-@table-header-font: "Helvetica Neue", Arial, sans-serif;
-@table-cell-height: 30px;
-
-#irods-avus {
-    table {
-        .bordered(
-            @table-border-color, 
-            @table-border-color, 
-            @table-border-color, 
-            @table-border-color
-        );
-
-        width: 100%;
-        margin-top: 5px;
-        margin-bottom: (@table-spacing * 4);
-        background: @bg-color;
-        padding: 4px;
-        border-collapse: collapse;
-        table-layout: fixed;
-
-        tr:hover {
-            background: darken(@bg-color, 10%);
-        }
-
-        td, th { 
-            padding-left: @table-spacing; 
-            padding-right: 5px;
-            border: @table-border;
-            text-align: center;
-            width: 33%;
-            height: @table-cell-height;
-        }
-
-        th {
-            font-family: @table-header-font;
-            font-weight: bold;
-            background: darken(@bg-color, 25%);
-        }
-    }
-}
 
 #footer {
     font-size: 25%;
