Added DE Import URL to the UI.

--- a/ui/src/css/kif-details.less
+++ b/ui/src/css/kif-details.less
@@ -67,6 +67,8 @@
 
 #lastmod-label, 
 #size-label, 
+
+#de-import-instructions-label,
 #irods-instructions-label, 
 #wget-instructions-label, 
 #curl-instructions-label {
@@ -85,7 +87,10 @@
     white-space: nowrap;
 }
 
-#irods-command-line, #wget-command-line, #curl-command-line {
+#de-import-url,
+#irods-command-line, 
+#wget-command-line, 
+#curl-command-line {
     .detail-style;
     .detail-content;
     margin-top: @command-line-top-margin;
@@ -93,7 +98,10 @@
     height: @command-line-height;
 }
 
-#clippy-wget-wrapper, #clippy-curl-wrapper, #clippy-irods-wrapper {
+#clippy-import-wrapper,
+#clippy-wget-wrapper, 
+#clippy-curl-wrapper, 
+#clippy-irods-wrapper {
     .detail-style;
     .detail-content;
     margin-top: @command-line-top-margin;
